added Stofa as confirmed ISP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,7 +176,7 @@
                 </mat-expansion-panel-header>
                 <mat-list>
                   <mat-list-item> TDC - Denmark </mat-list-item>
-                  <!-- <mat-list-item> Stofa - Denmark </mat-list-item> -->
+                  <mat-list-item> Stofa - Denmark </mat-list-item>
                   <!-- <mat-list-item> ComHem - Sweden </mat-list-item> -->
                   <!-- <mat-list-item> Sky - UK </mat-list-item> -->
                   <mat-list-item> Get AS - Norway</mat-list-item>
