Updated faq internal links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -317,7 +317,7 @@
                 </p>
                 <p class="mat-body-2">
                   If you are the owner of your modem, start by checking if the modem is on the <a
-                    (click)="expandAndScrollTo('faq-vulnerable-modems-sub', 0)">list
+                    (click)="scrollToExpandScrollTo('faq-am-i-affected','faq-vulnerable-modems-sub', 0)">list
                     of vulnerable modems</a>, and if it has an updated firmware available. Even if your modem is not on
                   the list, it may still be vulnerable. Check with the manufacturer of your modem if the latest firmware
                   prevents Cable Haunt, and if the modem were ever vulnerable. If you suspect that your modem has been
