Updated technical report downlink to always be the latest

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,7 +67,7 @@
               </mat-card-content>
               <mat-card-actions>
                 <a id="technical-report-download-button"
-                  href="https://github.com/Lyrebirds/Cable-Haunt-Report/releases/download/2.4/report.pdf"
+                  href="https://github.com/Lyrebirds/Cable-Haunt-Report/releases/latest/download/report.pdf"
                   mat-raised-button color="primary">Download</a>
               </mat-card-actions>
             </mat-card>
