--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -155,6 +155,10 @@ mat-card-actions button {
   margin: 10px auto;
 }
 
+.link{
+  color: rgb(0, 0, 220)!important;
+}
+
 .card-container {
   margin: auto;
 }
