Updated Who Is Affected section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,13 +94,11 @@
           </div>
           <div class="mat-title">Who is Affected</div>
           <p class="mat-body-2">
-            An estimated 200 million modems may be or might have been vulnerable in Europe alone. However it is very
-            hard to give a precise estimate of the reach of Cable Haunt. The reason for this, is that the vulnerability
-            originated in reference software, which have seemingly been copied by different cable modems manufacturers,
-            when creating their cable modem firmware. This means that we have not been able to track the exact spread of
-            the vulnerability, and that it might present itself in slightly different ways for different manufacturers.
-            The purpose of this website, is to inform as many affected users and providers as possible, in order to
-            improve their ability to protect themselves.
+            There are an estimated 200 million cable modems in Europe alone, and with almost no cable modem tested being secure without a firmware update, the number of modems initially vulnerable in Europe is estimated to be close to this number. However, it is very hard to give a precise estimate of the reach of Cable Haunt. The reason for this, is that the vulnerability originated in reference software, which have seemingly been copied by different cable modems manufacturers, when creating their cable modem firmware.
+            This means that we have not been able to track the exact spread of the vulnerability, and that it might present itself in slightly different ways for different manufacturers. We have tried to contact as many of the largest ISPs ahead of time, however we are a very small team. Many of the contacted ISPs have already rolled out firmware updates or are in the process, however some of these have whished not to be listed on this website.
+          </p>
+          <p class="mat-body-2">
+            The purpose of this website, is to inform as many affected users and providers as possible, in order to improve their ability to protect themselves.
           </p>
           <div class="mat-title">Who Discovered Cable Haunt</div>
           <div class="mat-body-2">
