--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -197,7 +197,7 @@
               would inform us at <a href="mailto:cablehaunt@lyrebirds.dk">cablehaunt@lyrebirds.dk</a>
             </p>
             <p class="mat-body-2">
-              If your modem is not supplied by your IPS and you want to check for yourself, we are working on getting as
+              If your modem is not supplied by your IPS or you want to check for yourself, we are working on getting as
               much information as we can on which modems are vulnerable. Several modems have already been confirmed to
               be vulnerable and we appreciate all the help we can get and have already received.
             </p>
@@ -216,7 +216,7 @@
               confirmed vulnerable.
               The information needed can typically be found in the configuration user interface of the modem, running on
               the default gateway.
-              In the list, the firmware version is the latest firmware that have been confirmed to be vulnerable.
+              In the lists, the firmware version is the latest firmware that have been confirmed to be vulnerable.
               The port is the port on the local network where the spectrum analyser is running.
               If the spectrum analyser requires credentials, they are also provided together with the authentication
               type used.
@@ -275,7 +275,7 @@
             <p class="mat-body-2">
               The report contains the full exploit and all technical details needed to replicate, understand and test
               for
-              the vulnerability. We have also developed a tool to check whether your modem is vulnerable, which can
+              the vulnerability. However, we have also developed a tool to check whether your modem is vulnerable, which can
               be found <a target="_blank" (click)="scrollToCenter('test-script-repo-button')">above</a>. <b>ONLY RUN THIS TEST ON EQUIPMENT YOU OWN</b>.
               The script automatically scans your network to find the spectrum analyser and tries to establish
               connection to the websocket. The script will test if the modem rejects requests from an external origin,
