--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
           </div>
           <p class="mat-body-2">
             Cable Haunt is a critical vulnerability found in cable modems from various manufacturers across the world.
-            The vulnerability enables remote attackers to gain complete control of a cable modem, through an endpoint on
+            The vulnerability enables remote attackers to execute abitrary code on your modem, indirectly through an endpoint on
             the modem. Your cable modem is in charge of the internet traffic for all devices on the network. Cable Haunt
             might therefore be exploited to intercept private messages, redirect traffic, or participation in botnets.
           </p>
