Updated am i affected FAQ wording

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -197,13 +197,13 @@
               would inform us at <a href="mailto:cablehaunt@lyrebirds.dk">cablehaunt@lyrebirds.dk</a>
             </p>
             <p class="mat-body-2">
-              If your modem is not supplied by your IPS and you want to check for yourself, we are working on getting as
-              much information as we can on which modems are vulnerable. Several modems have already been confirmed to
-              be vulnerable and we appreciate all the help we can get and have already received.
+              If your modem is not supplied by your IPS and you want to check for yourself, you can check if your modem is in the list of vulnerable modems below. This will require you to know your modems model and firmware version which can typically be found in the configuration user interface of the modem, running on
+              the default gateway. Later, we will also describe how to manually test you modem and add it to the losts. Several modems have already been confirmed to
+              be vulnerable and we are keeping lists updated as we recieve information. We appreciate all the help we can get and have already received.
             </p>
             <p class="mat-body-2">
-              Some of these modems have only been confirmed by third parties, and modems can therefore occur multiple
-              times with different firmware and have missing information. If you want to help us expand this list, we
+              Some of the vulmerable modems have only been confirmed by third parties, and modems can therefore occur multiple
+              times with different firmware and have missing information. If you want to help us, we
               thank you, and ask that you please read the <a (click)="scrollToAndExpand('faq-how-can-i-help', 4)">"What
                 Should I Do?"-FAQ</a> below and contact us at <a
                 href="mailto:cablehaunt@lyrebirds.dk">cablehaunt@lyrebirds.dk</a>.
@@ -212,11 +212,7 @@
               Vulnerable Modems
             </div>
             <p class="mat-body-2">
-              If you know your modems model and firmware version you can try to find it in the following lists of modems
-              confirmed vulnerable.
-              The information needed can typically be found in the configuration user interface of the modem, running on
-              the default gateway.
-              In the list, the firmware version is the latest firmware that have been confirmed to be vulnerable.
+              In the lists, the firmware version is the latest firmware that have been confirmed to be vulnerable.
               The port is the port on the local network where the spectrum analyser is running.
               If the spectrum analyser requires credentials, they are also provided together with the authentication
               type used.
