--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -197,14 +197,10 @@
               would inform us at <a href="mailto:cablehaunt@lyrebirds.dk">cablehaunt@lyrebirds.dk</a>
             </p>
             <p class="mat-body-2">
-              If your modem is not supplied by your IPS and you want to check for yourself, you can check if your modem is in the list of vulnerable modems below. This will require you to know your modems model and firmware version which can typically be found in the configuration user interface of the modem, running on
-              the default gateway. Later, we will also describe how to manually test you modem and add it to the losts. Several modems have already been confirmed to
-              be vulnerable and we are keeping lists updated as we recieve information. We appreciate all the help we can get and have already received.
-            </p>
-            <p class="mat-body-2">
-              Some of the vulmerable modems have only been confirmed by third parties, and modems can therefore occur multiple
-              times with different firmware and have missing information. If you want to help us, we
-              thank you, and ask that you please read the <a (click)="scrollToAndExpand('faq-how-can-i-help', 4)">"What
+              If your modem is not supplied by your ISP and you want to check for yourself, you can check if your modem is in the lists of vulnerable modems below. This will require you to know your modems model and firmware version which can typically be found in the configuration user interface of the modem, running on
+              the default gateway. Later, we will also describe how to manually test your modem and add it to the lists. Several modems have already been confirmed to
+              be vulnerable and we are keeping lists updated as we recieve information. We appreciate all the help we can get and have already received. If you want to help us, we
+              thank you, and ask that you please read this and the <a (click)="scrollToAndExpand('faq-how-can-i-help', 4)">"What
                 Should I Do?"-FAQ</a> below and contact us at <a
                 href="mailto:cablehaunt@lyrebirds.dk">cablehaunt@lyrebirds.dk</a>.
             </p>
@@ -212,6 +208,8 @@
               Vulnerable Modems
             </div>
             <p class="mat-body-2">
+              Some of the vulerable modems have only been confirmed by third parties, and modems can therefore occur multiple
+              times with different firmware and have missing information. 
               In the lists, the firmware version is the latest firmware that have been confirmed to be vulnerable.
               The port is the port on the local network where the spectrum analyser is running.
               If the spectrum analyser requires credentials, they are also provided together with the authentication
