--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -208,12 +208,11 @@
               Vulnerable Modems
             </div>
             <p class="mat-body-2">
-              Some of the vulerable modems have only been confirmed by third parties, and modems can therefore occur multiple
-              times with different firmware and have missing information. 
               In the lists, the firmware version is the latest firmware that have been confirmed to be vulnerable.
               The port is the port on the local network where the spectrum analyser is running.
               If the spectrum analyser requires credentials, they are also provided together with the authentication
-              type used.
+              type used. Some of the vulerable modems have only been confirmed by third parties, and modems can therefore occur multiple
+              times with different firmware and have missing information.
             </p>
             <p class="mat-body-2">
               <b>Modems confirmed by ISPs or us</b>
@@ -268,8 +267,7 @@
             </p>
             <p class="mat-body-2">
               The report contains the full exploit and all technical details needed to replicate, understand and test
-              for
-              the vulnerability. We have also developed a tool to check whether your modem is vulnerable, which can
+              for the vulnerability. However, we have also developed a tool to check whether your modem is vulnerable, which can
               be found <a target="_blank" (click)="scrollToCenter('test-script-repo-button')">above</a>. <b>ONLY RUN THIS TEST ON EQUIPMENT YOU OWN</b>.
               The script automatically scans your network to find the spectrum analyser and tries to establish
               connection to the websocket. The script will test if the modem rejects requests from an external origin,
