Updated faq wording

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -475,11 +475,11 @@
           <mat-expansion-panel [(expanded)]="expanded[11]">
             <mat-expansion-panel-header>
               <mat-panel-title>
-                A Branded vulnerability? Is That Really Warranted?
+                A Branded Vulnerability? Is That Really Warranted?
               </mat-panel-title>
             </mat-expansion-panel-header>
             <p class="mat-body-2">
-              Perhaps not. This is not heartbleed, EternalBlue, Meltdown or Rowhammer, and we have no illusions about this. And yes, Samuel Gross' recent publication of a <a href="https://googleprojectzero.blogspot.com/2020/01/remote-iphone-exploitation-part-1.html?m=1">vulnerability in iMessage</a> is way more interesting than something as boring as a buffer overflow in a modem.
+              Perhaps not. This is not heartbleed, EternalBlue, Meltdown or Row Hammer, and we have no illusions about this. And yes, Samuel Gross' recent publication of a vulnerability in iMessage much more technically interesting than a buffer overflow in cable modems. It is clear that the scale is what makes this exploit interesting.
             </p>
             <div class="mat-title">
               So Why Did You Brand It Anyway?
