--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -492,7 +492,7 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
             <p class="mat-body-2">
-              Perhaps not. This is not heartbleed, EternalBlue, Meltdown or Row Hammer, and we have no illusions about this. And yes, Samuel Gross' recent publication of a vulnerability in iMessage much more technically interesting than a buffer overflow in cable modems. While exploitation, websockets aversion to CORS and SOP and the effects the MIPS architecture have on the buffer overflow, is interesting it is clear that it is the scale, and how so many different manufacturers can have the same error, is what makes this vulnerability of public significance.
+              Perhaps not. This is not heartbleed, EternalBlue, Meltdown or Row Hammer, and we have no illusions about this. And yes, Samuel Gross' recent publication of a vulnerability in iMessage much more technically interesting than a buffer overflow in cable modems. While exploitation, websockets aversion to CORS and SOP and the effects the MIPS architecture have on the buffer overflow, is interesting it is clear that it is the scale, and its spread across different manufacturers, that gives this vulnerability public significance.
             </p>
             <div class="mat-title">
               So Why Did You Brand It Anyway?
