--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -458,7 +458,7 @@
           <mat-expansion-panel [(expanded)]="expanded[7]">
             <mat-expansion-panel-header>
               <mat-panel-title>
-                What is CVE-2019-19494 and CVE-2019-19495?
+                What Is CVE-2019-19494 And CVE-2019-19495?
               </mat-panel-title>
             </mat-expansion-panel-header>
             <p class="mat-body-2">
@@ -475,7 +475,7 @@
           <mat-expansion-panel [(expanded)]="expanded[8]">
             <mat-expansion-panel-header>
               <mat-panel-title>
-                Why is it called Cable Haunt?
+                Why Is It Called Cable Haunt?
               </mat-panel-title>
             </mat-expansion-panel-header>
             <p class="mat-body-2">
@@ -519,7 +519,7 @@
           <mat-expansion-panel [(expanded)]="expanded[9]">
             <mat-expansion-panel-header>
               <mat-panel-title>
-                What is Graffiti And How Is It Associated With Cable Haunt?
+                What Is Graffiti And How Is It Associated With Cable Haunt?
               </mat-panel-title>
             </mat-expansion-panel-header>
             <p class="mat-body-2">
