updated netcologne description

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -206,7 +206,7 @@
                   <mat-list-item> Telia Norway </mat-list-item>
                   <mat-list-item> Com Hem / Tele2 - Sweden (Patch being deployed. Power cycles will update vulnerable
                     modems.) </mat-list-item>
-                  <mat-list-item> NetCologne - Germany </mat-list-item>
+                  <mat-list-item> NetCologne / NetAachen – Germany </mat-list-item>
                 </mat-list>
               </mat-expansion-panel>
             </p>
