grammar, and added note to netcologne

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -206,7 +206,7 @@
                   <mat-list-item> Telia Norway </mat-list-item>
                   <mat-list-item> Com Hem / Tele2 - Sweden (Patch being deployed. Power cycles will update vulnerable
                     modems.) </mat-list-item>
-                  <mat-list-item> NetCologne / NetAachen – Germany </mat-list-item>
+                  <mat-list-item> NetCologne / NetAachen – Germany (Doesn't use Broadcom-based Modems) </mat-list-item>
                 </mat-list>
               </mat-expansion-panel>
             </p>
@@ -333,7 +333,7 @@
           <mat-expansion-panel [(expanded)]="expanded[2]">
             <mat-expansion-panel-header>
               <mat-panel-title>
-                What about Modems in Bridge mode, or behind firewall?
+                What About Modems in Bridge Mode, or Behind a Firewall?
               </mat-panel-title>
             </mat-expansion-panel-header>
             <p class="mat-body-2">
