Asterisk note added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -240,9 +240,9 @@
               In the lists, the firmware version is the latest firmware that have been confirmed to be vulnerable.
               The port is the port on the local network where the spectrum analyser is running.
               If the spectrum analyser requires credentials, they are also provided together with the authentication
-              type used. Some of the vulerable modems have only been confirmed by third parties, and modems can
-              therefore occur multiple
-              times with different firmware and have missing information.
+              type used. Some of the vulnerable modems have only been confirmed by third parties, and modems can
+              therefore occur multiple times with different firmware and have missing information.
+              If there is an asterisks at the end, it means that any subversion of model or firmware are vulnerable.  
             </p>
             <p class="mat-body-2">
               <b>Modems confirmed by ISPs or us</b>
